--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "friday-voice-assistant",
   "version": "1.0.0",
   "description": "AI-Powered Voice Assistant",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^2.0.2"
   }
 }
